--- a/testapp/WordIsBond-Info.plist
+++ b/testapp/WordIsBond-Info.plist
@@ -58,7 +58,10 @@
 		<key>UINavigationBar</key>
 		<dict>
 			<key>TintColor</key>
-			<dict/>
+			<dict>
+				<key>Red</key>
+				<integer>0</integer>
+			</dict>
 		</dict>
 	</dict>
 	<key>UISupportedInterfaceOrientations</key>
@@ -74,5 +77,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
