--- a/testapp/WordIsBond-Info.plist
+++ b/testapp/WordIsBond-Info.plist
@@ -77,5 +77,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MyriadPro-Regular.otf</string>
+	</array>
 </dict>
 </plist>
