Font and Search tweaks
Overriding system font
Spinner for search
Favourite button in detail view highlight fix
Search cleared correctly to stop pulling the search again after
cancelling

--- a/testapp/WordIsBond-Info.plist
+++ b/testapp/WordIsBond-Info.plist
@@ -80,6 +80,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>MyriadPro-Regular.otf</string>
+		<string>ModeC.otf</string>
 	</array>
 </dict>
 </plist>
